# trinity

./: .clang-tidy  .gitignore  CMakeLists.txt  NOTICE.md  README.md  vcpkg-configuration.json  vcpkg.json
vcpkg-dependency-source/carbon-blue-245d07a431099232cb6d42c497467d2e7daea097/: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
vcpkg-dependency-source/carbon-blue-245d07a431099232cb6d42c497467d2e7daea097/.teamcity/: pom.xml
vcpkg-dependency-source/carbon-blue-245d07a431099232cb6d42c497467d2e7daea097/cmake/: CcpBuildConfigurations.cmake  CcpPackageConfigHelpers.cmake  CcpTargetConfigurations.cmake
vcpkg-dependency-source/carbon-blue-245d07a431099232cb6d42c497467d2e7daea097/include/: Base64.h  BitPacker.h  BlueNet.h  BluePlatform.h  BluePlatformWin32.h  IBlueResMan.h  IMotherLode.h  ITriFunction.h
vcpkg-dependency-source/carbon-blue-245d07a431099232cb6d42c497467d2e7daea097/src/: BlackReader.cpp  BlackReader_Blue.cpp  BlueAsyncRes.cpp  BlueEventToPython.cpp  BlueFileUtil.cpp  BlueHeapq.h  BlueLogInMemory_Blue.cpp  BlueOS.h  BlueOS_Blue.cpp  BlueObjectMetadata.cpp  BlueObjectProxy.cpp  BluePaths.cpp  BluePaths_Blue.cpp  BlueRemoteStream.cpp  BlueResFileSystemLocal.cpp  BlueResFileSystemRemote_Blue.cpp  BlueResMan_Blue.cpp  BlueStatistics.cpp  BlueStatistics_Blue.cpp  BlueStreamMethods.cpp  BlueSysInfo_Blue.cpp  BlueTestHelpers.cpp  BlueThreadMonitor.h  BlueThreadMonitor_Blue.cpp  BlueTime.h  CallbackMan_Blue.cpp  FileLogger.cpp  IBlueEventListener_Blue.cpp  IBluePlacementObserver_Blue.cpp  IRootWriter.cpp  IRootWriter.h  LinkHash.h  LogToPython.h  NetworkLogger.cpp  PyRowset.h  PyTemplates.h  RWSpinLock.h  RemoteFileCache.cpp  RemoteFileCache.h  ResourceLoading.h  (+15 more)
vcpkg-dependency-source/carbon-blueexposure-c855175f5f261a301a12b63c0337e8eb8d92b081/: .gitignore  .gitmodules  BlueClasses.cpp  BlueScriptCallback.cpp  BlueStdResult.cpp  BlueStructureList.cpp  BlueTypes.cpp  BlueVariable.cpp  CMakeLists.txt  Copier.cpp  PythonKlass.cpp  README.md  TypeInfo.h  carbon-blueexposureConfig.cmake  vcpkg-configuration.json  vcpkg.json
vcpkg-dependency-source/carbon-blueexposure-c855175f5f261a301a12b63c0337e8eb8d92b081/.teamcity/: pom.xml
vcpkg-dependency-source/carbon-blueexposure-c855175f5f261a301a12b63c0337e8eb8d92b081/cmake/: CcpBuildConfigurations.cmake  CcpDocsGenerator.cmake  CcpTargetConfigurations.cmake  PyTestDiscoverTests.cmake
vcpkg-dependency-source/carbon-blueexposure-c855175f5f261a301a12b63c0337e8eb8d92b081/include/: BlueClass.h  BlueExposureHelpers.h  BlueExposureHelpersPython.h  BlueExtractArgumentPython.h  BlueListUtil.h  BlueMemberFunctionAsCallable.h  BluePythonObject.h  BlueRegistration.h  BlueSmartPtr.h  BlueStdResult.h  BlueWrapReturnValue.h  BlueWrapReturnValuePython.h  IBlueClasses.h  IBlueRtti.h  ICopier.h  IList.h  PythonKlass.h  StringBeResult.h
vcpkg-dependency-source/carbon-blueexposure-c855175f5f261a301a12b63c0337e8eb8d92b081/tests/: CMakeLists.txt  TestCallbacks.cpp  TestCallbacks_Blue.cpp  TestMultipleInterfaces.h  TestMultipleInterfaces_Blue.cpp  TestReferences.cpp  TestReferences_Blue.cpp  TestSuperclassMethods.h
vcpkg-dependency-source/carbon-core-250df5221bdbb981a46669ac7a7e72ed33e099e0/: .gitignore  CCPAssert.cpp  CCPHash.cpp  CCPLog.cpp  CCPMemory.cpp  CMakeLists.txt  CMakePresets.json  CcpCore.cpp  CcpSecureCrt.cpp  CcpSemaphore.cpp  README.md  StringConversions.cpp  vcpkg-configuration.json  vcpkg.json
vcpkg-dependency-source/carbon-core-250df5221bdbb981a46669ac7a7e72ed33e099e0/.teamcity/: pom.xml
vcpkg-dependency-source/carbon-core-250df5221bdbb981a46669ac7a7e72ed33e099e0/cmake/: CcpTargetConfigurations.cmake
vcpkg-dependency-source/carbon-core-250df5221bdbb981a46669ac7a7e72ed33e099e0/doc/: Doxyfile.in
vcpkg-dependency-source/carbon-core-250df5221bdbb981a46669ac7a7e72ed33e099e0/include/: CCPAssert.h  CCPHash.h  CCPMemoryTracker.h  CachedAllocator.h  CcpCrash.h  CcpMutex.h  CcpScopeGuard.h  CcpTelemetry.h  StringConversions.h  TrackableContainer.h
vcpkg-dependency-source/carbon-core-250df5221bdbb981a46669ac7a7e72ed33e099e0/tests/: CCPLog.cpp  CMakeLists.txt  StringConversions.cpp  TempFile.h  TracyTestClient.cpp
vcpkg-dependency-source/carbon-imageio-88d14adcd83033b57df99d7b8629169236e02abf/: .gitignore  CMakeLists.txt  ImageIOResult.cpp  ImageUtility.cpp  PsdHandler.cpp  README.md  StdAfx.h  Tr2BmpHandler.cpp  Tr2PngHandler.cpp  Tr2TgaHandler.cpp  vcpkg-configuration.json  vcpkg.json
vcpkg-dependency-source/carbon-imageio-88d14adcd83033b57df99d7b8629169236e02abf/.teamcity/: pom.xml  settings.kts
vcpkg-dependency-source/carbon-io-5c4c669f6ebbda56996f1326315222dae9bf281e/: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  NOTICE.md  README.md  vcpkg-configuration.json  vcpkg.json
vcpkg-dependency-source/carbon-io-5c4c669f6ebbda56996f1326315222dae9bf281e/src/: protocol.h  (+4 more)
vcpkg-dependency-source/carbon-math-50f7c65241b9e22514fdd0a7a159e86322e4d53e/: .gitignore  .gitmodules  CMakeLists.txt  README.md  carbon-mathConfig.cmake  vcpkg-configuration.json  vcpkg.json
vcpkg-dependency-source/carbon-mesh-55062e54e84cefb649ff44350377cbb49a6fddcd/: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
vcpkg-dependency-source/carbon-parser-b58a68538fe4ae63b3854b391744b86f561b901b/: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
vcpkg-dependency-source/carbon-pdm-222937b1cd9be45e64caecbd6bb103cc8f70723e/: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
vcpkg-dependency-source/carbon-pdmprotowrapper-d08e220697daa1b17298c257a803da64dcbc64a9/: .gitignore  CMakeLists.txt  CMakePresets.json
vcpkg-dependency-source/carbon-scheduler-327303b539aaf1850ebcc4ad73460e3a61855cff/: .editorconfig  .gitignore  CMakeLists.txt  NOTICE.md  README.md  vcpkg-configuration.json  vcpkg.json
vcpkg-dependency-source/carbon-trinityaudioapi-009b2ced9f2f9f8883fe11020b242193bc1ea6f0/: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg-configuration.json
(+3240 files in other folders)
